--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -136,8 +136,7 @@ async function plot_dataArray_values_to_text() {
 
 async function plot_bar_graph() {
 	
-	const dataArray = [30, 50, 80, 120, 200];
-	
+	const dataArray = [0, 0, 30, 50, 80, 120, 200];
 
 	const w = 400;
 	const h = 400;
