--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -136,7 +136,7 @@ async function plot_dataArray_values_to_text() {
 
 async function plot_bar_graph() {
 	
-	const dataArray = [0, 0, 30, 50, 80, 120, 200];
+	const dataArray = [30, 50, 80, 120, 200];
 
 	const w = 400;
 	const h = 400;
@@ -229,24 +229,35 @@ async function plot_bar_graph() {
 	} else if (dropdown_option_type == 'drop_down_option1') {
 		
 		// Way 1: using the scale command - did not work
-		const x_scale = d3.scaleBand()
-			.domain(dataArray.map((d,i) => i))
-			.range([0, w])
-			.padding(padding);
+		// const x_scale = d3.scaleBand()
+		// 	.domain(dataArray.map((d,i) => i))
+		// 	.range([0, w])
+		// 	.padding(padding);
 
-		const y_scale = d3.scaleLinear()
-			.domain([0, max_val])
-			.range([h, 0]);
+		// const y_scale = d3.scaleLinear()
+		// 	.domain([0, max_val])
+		// 	.range([h, 0]);
 		
-		const bar_chart = svg.selectAll('rect')
-			.data(dataArray)
-			.enter()
-			.append('rect')
-			.attr('width', bar_width)
-			.attr('height', d => y_scale(h-d))
-			.attr('x', (d,i) => x_scale(i))
-			.attr('y', (d,i) => y_scale(d))
-			.attr("fill", "steelblue");
+		// const bar_chart = svg.selectAll('rect')
+		// 	.data(dataArray)
+		// 	.enter()
+		// 	.append('rect')
+		// 	.attr('width', bar_width)
+		// 	.attr('height', d => y_scale(h-d))
+		// 	.attr('x', (d,i) => x_scale(i))
+		// 	.attr('y', (d,i) => y_scale(d))
+		// 	.attr("fill", "steelblue");
+
+		
+		svg.selectAll("rect")
+		    .data(data)
+		    .enter()
+		    .append("rect")
+		    .attr("x", (d, i) => i * 80)
+		    .attr("y", (d) => 200 - d)
+		    .attr("width", 50)
+		    .attr("height", (d) => d)
+		    .attr("fill", "steelblue");
 
 	} else if (dropdown_option_type == 'drop_down_option2') {
 		
