--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -243,7 +243,7 @@ async function plot_bar_graph() {
 			.attr("width", x_scale.bandwidth())
 			.attr("height", (d) => y_scale(d))
 		 	.attr('x', (d,i) => x_scale(i))
-			.attr("y", (d) => h - yScale(d))
+			.attr("y", (d) => h - y_scale(d))
 		 	.attr("fill", "steelblue");
 
 		//.attr('width', bar_width)  // what I had before
