--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -178,7 +178,7 @@ async function plot_bar_graph() {
 	svgElement.setAttribute('width', w); 
 	svgElement.setAttribute('height', h); 
 	
-	document.body.appendChild(h1Element);
+	document.body.appendChild(svgElement);
 
 	// ---------------------------------------------------
 
