--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -30,7 +30,8 @@
 <div id="data_display" style="display:block; text-align: left; width: 600px;"></div>
 
 <svg width="400" height="300"></svg>
-	
+
+<svg width="400" height="300"></svg>
 
 <script src='https://d3js.org/d3.v7.min.js'></script>
 
@@ -232,9 +233,8 @@ async function plot_bar_graph() {
 	// ---------------------------------------------------
 
 	// Asign the figure element on the page
-	const svg = d3.select("#svg_data_display");
-		//.attr('width', w)
-		//.attr('height', h);
+	// const figureElement = d3.select("#svg_data_display").attr('width', w).attr('height', h);
+	const figureElement = d3.select("svg").attr('width', w).attr('height', h);
 
 	// ---------------------------------------------------
 	
@@ -250,7 +250,7 @@ async function plot_bar_graph() {
 	if (dropdown_option_type == 'drop_down_option0') {
 
 		// Way 0: not using the scale command - did not work
-		const bar_chart = svg.selectAll('rect')
+		const bar_chart = figureElement.selectAll('rect')
 			.data(dataArray)
 			.enter()
 			.append('rect')
@@ -272,7 +272,7 @@ async function plot_bar_graph() {
 		 	.domain([0, d3.max(dataArray)])
 			.range([0, h]); 
 		
-		const bar_chart = svg.selectAll('rect')
+		const bar_chart = figureElement.selectAll('rect')
 			.data(dataArray)
 			.enter()
 			.append('rect')
@@ -291,7 +291,7 @@ async function plot_bar_graph() {
 		const padding_percentage_wrt_barWidth_way2 = 0.05; // *** USER INPUT ONLY : padding/space between bars is XXX percent of bar_width ***
 		const padding_way2 = Math.floor(padding_percentage_wrt_barWidth_way2 * bar_width_way2);
 		
-		const bar_chart = svg.selectAll('rect')
+		const bar_chart = figureElement.selectAll('rect')
 			.data(dataArray)
 			.enter()
 			.append('rect')
