--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -234,7 +234,8 @@ async function plot_bar_graph() {
 
 	// Asign the figure element on the page
 	// const figureElement = d3.select("#svg_data_display").attr('width', w).attr('height', h);
-	const figureElement = d3.select("svg").attr('width', w).attr('height', h);
+	// const figureElement = d3.select("svg").attr('width', w).attr('height', h);
+	const figureElement = d3.select("svg");
 
 	// ---------------------------------------------------
 	
