--- a/trying_d3_index2.html
+++ b/trying_d3_index2.html
@@ -226,7 +226,7 @@ async function test2() {
 	console.log("y: ", y);
 	
 	
-        const svg = d3.select("svg");
+        const figureElement = d3.select("svg");
         
         const bar_chart = figureElement.selectAll('rect')
 			.data(dataArray)
