--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
 
-<input id="input_text" type="text" value="" placeholder="" rows="10" cols="100" style="display:block; text-align: left; width: 600px;">
+<!-- <input id="input_text" type="text" value="" placeholder="" rows="10" cols="100" style="display:block; text-align: left; width: 600px;"> -->
 
 <br>
 	
