--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 async function run() {
 
 	var arr_3d = [[[1], [2]], [[3], [4]]];
-	document.getElementById('notification').innerHTML = arr_3d;
+	document.getElementById('notification').innerHTML = arr_3d.toString();
 
 	var output_shape = await shape(arr_3d);
 	console.log('output_shape: ', output_shape);  // 2, 2, 1
@@ -31,7 +31,7 @@ async function run() {
 	var dims = [2, 1, 2]; // [desired_0th_dim, desired_1st_dim, desired_2nd_dim]
 	var desired_3d = await exchange_3d_dimensions(arr_3d, dims);
 	console.log("desired_3d: ", desired_3d);
-	document.getElementById('notification').innerHTML += desired_3d;
+	document.getElementById('notification').innerHTML += desired_3d.toString();
 	
 	output_shape = await shape(desired_3d);
 	console.log('output_shape: ', output_shape);  // 2, 2, 1
@@ -124,6 +124,10 @@ async function exchange_3d_dimensions(arr_3d, dims) {
 			}
 		}
 	}
+	console.log('a: ', a);
+	console.log('b: ', b);
+	console.log('c: ', c);
+	console.log('val: ', val);
 
 	// [1] Make the new shape array, filled with zeros
 	var desired_3d = await zeros(dims);
@@ -134,9 +138,15 @@ async function exchange_3d_dimensions(arr_3d, dims) {
 	var desired_2nd_dim = dims.at(2);
 	
 	for (var i=0; i<desired_0th_dim; i++) {
+		console.log('i: ', i);
+		
 		for (var j=0; j<desired_1st_dim; j++) {
+			console.log('j: ', j);
+			
 			for (var k=0; k<desired_2nd_dim; k++) {
-			       
+				console.log('k: ', k);
+
+				// cycle over the index of a for every i,j,k value
 			       for (var ind=0; ind<a.length; ind++) {
 				       if (a.at(ind) == i && b.at(ind) == j && c.at(ind) == k) {
 						desired_3d[i][j][k] = val.at(ind);
